# 8-bit-backgrounds

./: .gitignore  AUTHORS  README.md  meson.build
backgrounds/: 8-bit-backgrounds.xml.in  meson.build
